--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
+    "aos": "^2.3.4",
     "axios": "^1.11.0",
     "gsap": "^3.13.0",
     "react": "^19.1.0",
