--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.8.2",
     "aos": "^2.3.4",
     "axios": "^1.11.0",
+    "dayjs": "^1.11.13",
     "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
     "react": "^19.1.0",
